feat: add automatic logger cleanup on Android process exit
Implemented lifecycle-based cleanup:
- LzLogger implements DefaultLifecycleObserver
- Registers ProcessLifecycleOwner observer in prepareLog
- onStop callback automatically closes logger when process stops
- Logs final message before closing: "Process stopping, closing logger"

Dependencies:
- Added androidx.lifecycle:lifecycle-process:2.8.7

This matches iOS behavior:
- iOS: Listens to UIApplicationWillTerminateNotification
- Android: Listens to ProcessLifecycleOwner.onStop()
- Both platforms now automatically close logger on app termination

Benefits:
- No manual close() call needed in most cases
- Ensures data is flushed before process exit
- Prevents resource leaks

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -61,3 +61,8 @@ android {
         minSdk = 24
     }
 }
+
+dependencies {
+    // Lifecycle support for automatic cleanup
+    implementation 'androidx.lifecycle:lifecycle-process:2.8.7'
+}
