fix: use absolute paths in Android CMakeLists.txt
Fixed CMake error: "Cannot find source file"

Problem:
- Relative paths (../../../src/lz_logger.c) failed during build
- CMake working directory differs from expectation

Solution:
- Use get_filename_component to get absolute PROJECT_ROOT
- Use CMAKE_CURRENT_SOURCE_DIR for JNI source
- Use absolute paths for all source files

Changes:
- lz_logger_jni.cpp: ${CMAKE_CURRENT_SOURCE_DIR}/lz_logger_jni.cpp
- lz_logger.c: ${PROJECT_ROOT}/src/lz_logger.c
- Include dir: ${PROJECT_ROOT}/src

This ensures paths are resolved correctly regardless of build context

--- a/android/src/main/cpp/CMakeLists.txt
+++ b/android/src/main/cpp/CMakeLists.txt
@@ -6,21 +6,24 @@ project(lz_logger)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 14)
 
+# 获取项目根目录 (从 CMakeLists.txt 向上 4 级)
+get_filename_component(PROJECT_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../../../.." ABSOLUTE)
+
 # 添加 C 核心源文件
 add_library(
     lz_logger
     SHARED
     # JNI 层
-    lz_logger_jni.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/lz_logger_jni.cpp
     # C 核心层
-    ../../../src/lz_logger.c
+    ${PROJECT_ROOT}/src/lz_logger.c
 )
 
 # 包含头文件目录
 target_include_directories(
     lz_logger
     PRIVATE
-    ../../../src
+    ${PROJECT_ROOT}/src
 )
 
 # 链接 Android 日志库
