fix: add Kotlin plugin to Android build.gradle
Problem:
- Kotlin classes (LzLogger.kt) were not being compiled
- Only Java compilation was enabled
- This caused 'Unresolved reference LzLogger' in Klook app

Solution:
- Added kotlin-gradle-plugin to buildscript dependencies
- Applied kotlin-android plugin
- Added kotlinOptions with jvmTarget = 11

This enables Kotlin compilation for the Android module,
allowing LzLogger Kotlin class to be properly compiled
and available to consuming projects.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,6 +12,7 @@ buildscript {
     dependencies {
         // The Android Gradle Plugin knows how to build native code with the NDK.
         classpath("com.android.tools.build:gradle:8.9.1")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:2.1.20")
     }
 }
 
@@ -23,6 +24,7 @@ rootProject.allprojects {
 }
 
 apply plugin: "com.android.library"
+apply plugin: "kotlin-android"
 
 android {
     namespace = "io.levili.lzlogger"
@@ -55,6 +57,10 @@ android {
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_11
         targetCompatibility = JavaVersion.VERSION_11
+    }
+
+    kotlinOptions {
+        jvmTarget = "11"
     }
 
     defaultConfig {
