fix: Android 端改用 Java Crypto API 替代 OpenSSL
**问题：**
Android NDK r22+ 已移除 OpenSSL，导致编译失败

**解决方案：**
1. 创建 CryptoHelper.java - 使用 Java Crypto API 实现加密
   - PBKDF2WithHmacSHA256 密钥派生
   - AES/CTR/NoPadding 加密
   - SecureRandom 生成盐值

2. 修改 lz_crypto.c Android 部分
   - 通过 JNI 调用 Java 方法
   - 线程安全的 JNIEnv 获取
   - 自动附加/分离线程

3. 添加 JNI_OnLoad 初始化
   - 获取 JavaVM 和类引用
   - 缓存方法 ID

4. 更新构建配置
   - 移除 OpenSSL 依赖
   - 恢复默认 NDK 版本

**优点：**
- 无需额外依赖库
- 减小包体积
- 使用系统 API，稳定可靠
- 与 iOS CommonCrypto 方案一致

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,10 +33,7 @@ android {
     // to bump the version in their app.
     compileSdk = 36
 
-    // Use the NDK version
-    // declared in /android/app/build.gradle file of the Flutter project.
-    // Replace it with a version number if this plugin requires a specific NDK version.
-    // (e.g. ndkVersion "23.1.7779620")
+    // 使用父项目的 NDK 版本 (无需 OpenSSL，使用 Java Crypto API)
     ndkVersion = android.ndkVersion
 
     // Invoke the shared CMake build with the Android Gradle Plugin.
