feat: Add native performance testing and comprehensive performance report
- Add iOS native performance tests (XCTest)
- Add Android native performance tests (Flutter integration)
- Add comprehensive performance report comparing C write API vs native logging system
- Key findings:
  * Native logging system: iOS 375k logs/sec, Android 358k logs/sec
  * Formatting overhead accounts for 96% of time (timestamp, thread ID, string formatting)
  * lz_logger_write() optimized to limit: 0.11μs (9.37M logs/sec)
  * iOS encryption performance stable at 2.7μs
  * Android encryption has JNI overhead issue (0.5μs -> 8.0μs)
- Add ProGuard rules for Android release builds
- Update example app with performance test UI

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -63,6 +63,12 @@ android {
     defaultConfig {
         minSdk = 24
     }
+
+    buildTypes {
+        release {
+            consumerProguardFiles 'proguard-rules.pro'
+        }
+    }
 }
 
 dependencies {
